Change navigation margin and alignment to correct magic line placement error.

--- a/app/assets/stylesheets/desktop/_navigation.css.sass
+++ b/app/assets/stylesheets/desktop/_navigation.css.sass
@@ -22,8 +22,8 @@
   a
     position: relative
     display: inline-block
-    padding: 0 $nav-pad-4
     line-height: 3.034
+    padding: 0 $nav-pad-4
     font-family: $base-font-nav
     +link-colors($link-nav, $link-nav, $link-nav, $link-nav, $link-nav)
     &:hover
@@ -35,8 +35,8 @@
   +at-breakpoint($break9)
     +span-columns(4, $break9)
     +reveal-hidden
-    margin-right: 0
-    text-align: right
+    // margin-right: 0
+    // text-align: right
     a
       padding: 0 $nav-pad-9
       &.active
